--- a/test/pom.xml
+++ b/test/pom.xml
@@ -22,6 +22,11 @@
             <classifier>jdk5</classifier>
         </dependency>
         <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>7.0</version>
